--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             <div class="hero">
                 <div class="hero-content gap-10 flex-col lg:flex-row">
-                    <img src="./images/11.png" class="w-1/3 lg:max-w-sm rounded-lg shadow-2xl" />
+                    <img src="./Images/11.png" class="w-1/3 lg:max-w-sm rounded-lg shadow-2xl" />
                     <div>
                         <div class="collapse collapse-plus ">
                             <input type="radio" name="my-accordion-3" checked="checked" />
