add input field

--- a/index.html
+++ b/index.html
@@ -562,18 +562,34 @@
                 </div>
                 <div class="w-full lg:w-6/12">
                     <div class="grid grid-rows-1 grid-flow-col gap-2 my-2">
-                        <div  >
-                            <label for="">Your Name</label> <br>
+                        <div >
+                            <label class="text-xl font-semibold" for="">Your Name</label> <br>
                             <input class="border border-2 rounded-xl p-2" type="text" placeholder="Enter Your Full Name">
                         </div>
                         <div>
                             <div >
-                                <label for="">Your Name</label> <br>
-                                <input class="border border-2 rounded-xl p-2" type="text" placeholder="Enter Your Full Name">
+                                <label class="text-xl font-semibold" for="">Your Email</label> <br>
+                                <input class="border border-2 rounded-xl p-2" type="email" placeholder="Enter Your Full Email">
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="grid grid-rows-1 grid-flow-col gap-2 my-2">
+                        <div  >
+                            <label class="text-xl font-semibold" for="">Subject</label> <br>
+                            <input class="border border-2 rounded-xl p-2" type="text" placeholder="Enter Your Subject">
+                        </div>
+                        <div>
+                            <div >
+                                <label class="text-xl font-semibold" for="">Phone Number</label> <br>
+                                <input class="border border-2 rounded-xl p-2" type="text" placeholder="Enter Your Phone Number">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <label class="text-xl font-semibold" for="">Message</label> <br>
+                        <textarea class="border border-2 rounded-xl p-2" name="" id="" cols="30" rows="10" placeholder="Write your message"></textarea>
+                    </div>
+                    <button class="btn btn-error text-white">Send Message</button>
                 </div>
             </div>
         </section>
